@@ -597,6 +597,11 @@ caption {
     margin: 2px;
 }
 
+.g-voting-results {
+	margin: 0 auto;
+        border-top: 1px solid #fff;
+}
+
 /* ---- */
 
 .infoline_success {
