@@ -1,3 +1,14 @@
+2008-08-12 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b6
+
+ * Fix: testRequirement() was not complete.
+        Thus some album action did not appear in the select box.
+
+ * Fix: Voting for images broken.
+
+ * Change: Nicer look of voting results.
+
+ * Change: Modified Album::getVotingIdByIndex()
+
 2008-08-12 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b5
 
  * Fix: Icon for slideshow link on mainpage wrong.
